# odbc-bridge

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  docker-compose.yml  first_reading.html  index.html  init_test.sh  searchindex.js
.github/workflows/: check.yml  gh-pages.yml  release.yml
book/: 404.html  chapter_1.html  index.html  print.html  searchindex.json
dameng-helper/: Cargo.toml  README.md
dameng-helper/src/: column.rs  data_type.rs  error.rs  lib.rs  table.rs
docker/: Dockerfile  README.md  odbcinst.ini
docs/: book.toml
docs/book/: 404.html  chapter_1.html  index.html  print.html
docs/src/: SUMMARY.md  first_reading.md
docs/theme/: index.hbs
odbc-api-helper/: Cargo.toml  README.md
odbc-api-helper/src/: debug.rs  error.rs  lib.rs
odbc-api-helper/src/bridge/: dameng_to_pg.rs  mod.rs  odbc_to_pg.rs  pg_to_dameng.rs
odbc-api-helper/src/executor/: batch.rs  database.rs  execute.rs  mod.rs  prepare.rs  query.rs  statement.rs  table.rs
odbc-api-helper/src/extension/: dameng.rs  mod.rs  odbc.rs  pg.rs  util.rs
odbc-api-helper/src/state/: mod.rs
odbc-api-helper/src/tests_cfg/: mod.rs
odbc-api-helper/tests/: test_long_data.rs
odbc-bridge/: Cargo.toml  README.md
odbc-bridge/src/: main.rs
odbc-common/: Cargo.toml  README.md
odbc-common/src/: error.rs  lib.rs  macros.rs  print_table.rs  sqlstate_handler.rs  state.rs  tests_cfg.rs
pg-helper/: Cargo.toml  README.md
pg-helper/src/: lib.rs  main.rs  parser.rs  state.rs  table.rs
src/: debug.rs  extension.rs  lib.rs
src/bridge/: convert.rs  dameng_to_pg.rs  mod.rs
src/brige/: convert.rs
src/executor/: database.rs  error.rs  execute.rs  mod.rs  query.rs  statement.rs  table.rs
src/extension/: dameng.rs  mod.rs  odbc.rs  pg.rs
