[package]
name = "odbc-api-helper"
version = "0.1.5"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "odbc-api helper"
keywords = ["odbc", "odbc-api", "odbc-api-helper"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-api-helper"
documentation = "https://docs.rs/odbc-api-helper"
homepage = "https://github.com/baoyachi/odbc-api-helper"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
nu-table = "0.67.0"
nu-protocol = "0.67.0"
odbc-api = "0.48.0"
bytes = "1.2.1"
