[package]
name = "dameng-helper"
version = "0.1.0"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "dameng database helper"
keywords = ["dameng", "odbc", "orm", "dameng-odbc", "dm"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-api-helper"
documentation = "https://docs.rs/dameng-helper"
homepage = "https://github.com/baoyachi/odbc-api-helper"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-api = "0.49.0"
anyhow = "1.0.65"
thiserror = "1.0.36"
enumset = "1.0.11"