[package]
name = "dameng-helper"
version = "0.2.1"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "dameng database helper"
keywords = ["dameng", "odbc", "orm", "dameng-odbc", "dm"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-bridge"
documentation = "https://docs.rs/dameng-helper"
homepage = "https://github.com/baoyachi/odbc-bridge"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-api = "0.50.2"
anyhow = "1.0.65"
thiserror = "1.0.36"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4.17"
odbc-common = { path = "../odbc-common", version = "0.1.0" }

[dev-dependencies]
odbc-api-helper = { path = "../odbc-api-helper", version = "0.2.2" }
once_cell = "1.15.0"
regex = "1.6.0"
serde_json = "1.0.87"
simple-log = "1.6.0"
