[package]
name = "odbc-api-helper"
version = "0.1.24"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "odbc-api helper"
keywords = ["odbc", "odbc-api", "odbc-api-helper"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-bridge"
documentation = "https://docs.rs/odbc-api-helper"
homepage = "https://github.com/baoyachi/odbc-bridge"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
nu-table = "0.69.1"
nu-protocol = "0.69.1"
odbc-api = "0.50.2"
anyhow = "1.0.64"
postgres-types = "0.2.4"
postgres-protocol = "0.6.4"
bytes = "1.2.1"
either = "1.8.0"
time = { version = "0.3.14", features = ["macros", "parsing"] }
chrono = "0.4.22"
async-trait = "0.1.57"
dameng-helper = { path = "../dameng-helper", version = "0.1.0" }
pg-helper = { path = "../pg-helper", version = "0.1.0" }
