[package]
name = "odbc-api-helper"
version = "0.2.5"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "odbc-api helper"
keywords = ["odbc", "odbc-api", "odbc-api-helper"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-bridge"
documentation = "https://docs.rs/odbc-api-helper"
homepage = "https://github.com/baoyachi/odbc-bridge"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
strum = "0.21"
strum_macros = "0.21"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4.17"
postgres-types = "0.2.4"
postgres-protocol = "0.6.4"
bytes = "1.2.1"
either = "1.8.0"
time = { version = "0.3.14", features = ["macros", "parsing"] }
chrono = "0.4.22"
async-trait = "0.1.57"
dameng-helper = { path = "../dameng-helper", version = "0.2.4" }
odbc-common = { path = "../odbc-common", version = "0.2.3" }
pg-helper = { path = "../pg-helper", version = "0.2.3" }
