[package]
name = "odbc-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-api-helper = { path = "../odbc-api-helper" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
clap = {version="4.0.18",features=["derive"]}