[package]
name = "odbc-common"
version = "0.2.3"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "odbc bridge common"
keywords = ["dameng", "odbc", "orm", "dameng-odbc", "dm"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-bridge"
documentation = "https://docs.rs/odbc-bridge"
homepage = "https://github.com/baoyachi/odbc-bridge"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-protocol = "=0.69.1"
nu-table = "=0.69.1"
log = "0.4.17"
odbc-api = "0.50.2"
anyhow = "1.0.66"