[package]
name = "pg-helper"
version = "0.2.3"
edition = "2021"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "postgres database helper"
keywords = ["postgres", "odbc", "postgres-helper", "oid", "pg"]
readme = "README.md"
repository = "https://github.com/baoyachi/odbc-bridge"
documentation = "https://docs.rs/pg-helper"
homepage = "https://github.com/baoyachi/odbc-bridge"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
odbc-common = { path = "../odbc-common", version = "0.2.3" }
postgres-types = "0.2.4"

[dev-dependencies]
serde_json = "1.0.87"